# telemetry_tx

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
dev/: dockerfile
dev/cmake/: flash.cmake  stm32f103rb.cmake  stm32f1xx_hal.cmake
inc/: main.h  stm32f1xx_it.h
inc/hal/: stm32f1xx_hal_conf.h
scripts/: build.sh  build_docker.sh  default_dirs.gdb
src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
